--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ cron = "0.12.1"
 serde = "1.0.202"
 serde_derive = "1.0.202"
 toml = "0.8.13"
+
+[profile.release]
+opt-level = 'z'
+lto = true
+codegen-units = 1
