--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,26 @@ jobs:
           command: build
           args: --release
 
+        - name: Check if Tag Exists
+        id: check_tag
+        run: |
+          if git rev-parse --quiet --verify "refs/tags/main-release" >/dev/null; then
+            echo "::set-output name=tag_exists::true"
+          else
+            echo "::set-output name=tag_exists::false"
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Delete Existing Tag
+        id: delete_tag
+        if: steps.check_tag.outputs.tag_exists == 'true'
+        run: |
+          git tag -d main-release
+          git push origin :refs/tags/main-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
