feat: implement FTP and S3 backup storage with configurable upload destinations

--- a/Config.toml.example
+++ b/Config.toml.example
@@ -2,3 +2,16 @@
 db_name = "coba"
 db_username = "postgresql"
 db_container_name = "devilbox-pgsql-1"
+
+[cron]
+expression = "0 30 0 * * *"
+
+[storage]
+media = "ftp"
+
+[storage.ftp]
+host = "ftp.example.com"
+port = 21
+username = "user"
+password = "pass"
+path = "/path/to/backup"
