--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,8 @@ serde = "1.0.202"
 serde_derive = "1.0.202"
 toml = "0.8.13"
 suppaftp = "6.2.0"
-aws-sdk-s3 = "1.7.0"
-aws-config = "1.0.1"
-aws-credential-types = "1.0.3"
-aws-smithy-runtime-api = "1.0.3"
-aws-types = "1.0.3"
-tokio = { version = "1.32.0", features = ["full"] }
+rust-s3 = "0.33.0"
+tokio = { version = "1.45.0", features = ["full"] }
 
 [profile.release]
 opt-level = 'z'
