--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,9 @@ jobs:
           args: --release
 
       - name: Set CARGO_PKG_VERSION
-        run: echo "CARGO_PKG_VERSION=$(cat Cargo.toml | grep -oP '(?<=version = ")[^"]+')" >> $GITHUB_ENV
+        run: |
+          VERSION=$(grep -oP '(?<=^version = ")[^"]+' Cargo.toml)
+          echo "CARGO_PKG_VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Create Release
         id: create_release
